--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FFD740</color>
     <color name="translucid_white">#eeffffff</color>
     <color name="white">#ffffff</color>
+    <color name="detail_background">#f9f9f9</color>
 
 </resources>
