--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="cardview_horizontal_margin">16dp</dimen>
     <dimen name="cardview_vertical_margin">32dp</dimen>
+    <dimen name="divider_height">2dp</dimen>
+    <dimen name="cardview_inset_element">46dp</dimen>
 </resources>
